# glance

./: .gitignore  LICENSE  README.md
.claude/: launch.json
.github/workflows/: ci.yml
asr-worker/: README.md  com.fanyi.asr.plist  pyproject.toml  worker.py
docs/: claude-design-briefs.md  design-tokens.md
extension/: manifest.json
extension/src/: background.js  content_guard.js  content_main.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  subtitle.js
extension/src/lib/: client.js  walker.js
extension/src/site-adapters/: generic.js  github.js  xcom.js
extension/styles/: inject.css
scripts/: install-services.sh
server/: README.md  com.fanyi.server.plist  config.example.yaml  pyproject.toml
server/app/: cache.py  config.py  main.py  pdf_extract.py  prompts.py  providers_store.py  stats.py  translator.py  vtt_cache.py
server/tests/: test_cache.py  test_prompts.py  test_translator.py  test_vtt_cache.py
