[project]
name = "fanyi-server"
version = "0.1.0"
description = "Local translation gateway for fanyi-ext extension"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "orjson>=3.10",
    "python-multipart>=0.0.26",
    "pdfminer.six>=20240706",
    "pypdfium2>=4.30",
    "pillow>=11",
    # Headless Chromium for /pdf/export — renders the bilingual HTML view to a
    # downloadable PDF preserving MathJax, figure crops, and CJK fonts.
    "playwright>=1.49",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=1.3.0",
]
